examples/bad/iface_missing.mko
interface Reader {
    fn read() -> int
}

fn main() {
    print("no Reader_read")
}
